  * [fix] osregistry: "deletekey" in registry section uses UTF8ToWinCP to handle umlauts correctly. (#3574, !49, a.schmitz)
  * [fix] osprocesses: fix in function isprocessChildOf in function isParentByPid. 
          repeat.. until loop now stops after 100 iterations when no other conditions were reached before 
          to avoid a pontential endless loop. (j.werner)
  
-- j.werner <j.werner@uib.de> 11 Mai 2022


opsi-script (4.12.4.37) stable; urgency=low

  * osparser: new global constant %opsiUsertmpDir%; implements #4496
  * osparser: allow json value syntax in params in opsiServiceCall:
    i.e. numeric/boolean values, arrays, objects and null without quotes; implements #4705
  * oscertificates: finalize function for linux /mac:
    function pemfileToSystemStore(filename: string): boolean;
    function removeCertFromSystemStore(labelstr: string): boolean;
    function listCertificatesFromSystemStore(): TStringList;
    function isCertInstalledInSystemStore(labelstr: string): boolean;
  * new function isCertInstalledInSystem(<label>): boolean; [WLM]
  * new function importCertToSystem(<filename>): noresult;  [WLM]
  * new function removeCertFromSystem(<label>): noresult;  [WLM]
  * new function listCertificatesFromSystem: stringlist;  [WLM]
  * new command ELSEIF <condition>  [WLM]
  * opsparser: implement elseif
  * opsparser: A more detailed description how the If / ELSE / ELSEIF / ENDIF parser works
  * interacticve GUI: Button "View Log" now shows the log in the opsi-logviewer [W/L]
  * killtask (fix): a process of another user can be killed if opsi-script is running as SYSTEM [W]
  * osnetworkcalculator: fixes at cidrToNetmask
  * osnetworkcalculator: new function netmaskToCidr(netmask: string): string;
  * new function cidrToNetmask(<string>): string;  [WLM]
  * new function netmaskToCidr(<string>): string;  [WLM]
  * osparser: new global constant %FQDN% for fqdn in network (not opsi service) context; implements #4554