@@ -68,6 +68,7 @@ opsi-script (4.12.5.0) unreleased; urgency=low
   * [fix] osprocesses: fix in function isprocessChildOf in function isParentByPid. 
           repeat.. until loop now stops after 100 iterations when no other conditions were reached before 
           to avoid a pontential endless loop. (j.werner)
+  * [fix] oswebservice: do not use twisted version but response content type to detect opsi 4.0 (d.oertel)
   
 -- j.werner <j.werner@uib.de> 11 Mai 2022
 
